--- a/404.html
+++ b/404.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="/valentine-app/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/valentine-app/_app/immutable/entry/start.Dmp7goW_.js">
-		<link rel="modulepreload" href="/valentine-app/_app/immutable/chunks/BXHRO1Mo.js">
+		<link rel="modulepreload" href="/valentine-app/_app/immutable/entry/start.DTwI9_z2.js">
+		<link rel="modulepreload" href="/valentine-app/_app/immutable/chunks/CkjjbcRN.js">
 		<link rel="modulepreload" href="/valentine-app/_app/immutable/chunks/BBHjuitq.js">
 		<link rel="modulepreload" href="/valentine-app/_app/immutable/chunks/C9NY-9RC.js">
-		<link rel="modulepreload" href="/valentine-app/_app/immutable/chunks/a4wDEB8Q.js">
+		<link rel="modulepreload" href="/valentine-app/_app/immutable/chunks/Bt4JvJDZ.js">
 		<link rel="modulepreload" href="/valentine-app/_app/immutable/chunks/C7vWIKlG.js">
-		<link rel="modulepreload" href="/valentine-app/_app/immutable/entry/app.pXWPQ8RV.js">
+		<link rel="modulepreload" href="/valentine-app/_app/immutable/entry/app.Ntw6KjFJ.js">
 		<link rel="modulepreload" href="/valentine-app/_app/immutable/chunks/xb9eWh_e.js">
 		<link rel="modulepreload" href="/valentine-app/_app/immutable/chunks/R4DkLa8W.js">
 		<link rel="modulepreload" href="/valentine-app/_app/immutable/chunks/DClelHdK.js">
@@ -21,7 +21,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_17sxwkc = {
+					__sveltekit_mdxy7l = {
 						base: "/valentine-app",
 						assets: "/valentine-app"
 					};
@@ -29,8 +29,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/valentine-app/_app/immutable/entry/start.Dmp7goW_.js"),
-						import("/valentine-app/_app/immutable/entry/app.pXWPQ8RV.js")
+						import("/valentine-app/_app/immutable/entry/start.DTwI9_z2.js"),
+						import("/valentine-app/_app/immutable/entry/app.Ntw6KjFJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
