--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 		<link href="./_app/immutable/assets/0.c5OG9c5b.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/DecorativeHearts.Cw-xhZ3N.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CgbvD8Wu.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Dmp7goW_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BXHRO1Mo.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DTwI9_z2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CkjjbcRN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BBHjuitq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C9NY-9RC.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/a4wDEB8Q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Bt4JvJDZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C7vWIKlG.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.pXWPQ8RV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Ntw6KjFJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/xb9eWh_e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/R4DkLa8W.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DClelHdK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B6ijnidv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DyGBudka.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DcvBn2kv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DB6_87id.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/QqDisodb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C20a0blh.js">
@@ -32,7 +32,7 @@
 			
 			<script>
 				{
-					__sveltekit_17sxwkc = {
+					__sveltekit_mdxy7l = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/valentine-app"
 					};
@@ -40,8 +40,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Dmp7goW_.js"),
-						import("./_app/immutable/entry/app.pXWPQ8RV.js")
+						import("./_app/immutable/entry/start.DTwI9_z2.js"),
+						import("./_app/immutable/entry/app.Ntw6KjFJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
