--- a/index.html
+++ b/index.html
@@ -5,34 +5,34 @@
 		<link rel="icon" href="./favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.c5OG9c5b.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/DecorativeHearts.Cw-xhZ3N.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.CgbvD8Wu.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DTwI9_z2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CkjjbcRN.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BBHjuitq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C9NY-9RC.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Bt4JvJDZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C7vWIKlG.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Ntw6KjFJ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/xb9eWh_e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/R4DkLa8W.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DClelHdK.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B6ijnidv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DcvBn2kv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DB6_87id.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/QqDisodb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C20a0blh.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CxzComek.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DCwrimb1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BmvFsIy6.js"><!--12qhfyh--><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/><!----><title>С Днём Святого Валентина!</title>
+		<link href="./app/immutable/assets/0.c5OG9c5b.css" rel="stylesheet">
+		<link href="./app/immutable/assets/DecorativeHearts.Cw-xhZ3N.css" rel="stylesheet">
+		<link href="./app/immutable/assets/2.CgbvD8Wu.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/entry/start.T3EaHik5.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/D_YqQRRL.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/BBHjuitq.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/C9NY-9RC.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/ChqkMMij.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/C7vWIKlG.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.R7v5xybD.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/xb9eWh_e.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/R4DkLa8W.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/DClelHdK.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/B6ijnidv.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.ATxMnVHz.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/DB6_87id.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/QqDisodb.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/C20a0blh.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/2.B8hNX-BT.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/DCwrimb1.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/PXjZ4jop.js"><!--12qhfyh--><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/><!----><title>С Днём Святого Валентина!</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!----><div class="valentine-app svelte-12qhfyh"><header class="valentine-header svelte-10x4prz"><!--[--><div class="heart svelte-1lra3i" style="top: 20px; left: 5%; animation-delay: 0s;">❤️</div><div class="heart svelte-1lra3i" style="top: 60px; left: 90%; animation-delay: 1s;">❤️</div><div class="heart svelte-1lra3i" style="top: 40px; left: 80%; animation-delay: 2s;">❤️</div><div class="heart svelte-1lra3i" style="top: 100px; left: 15%; animation-delay: 3s;">❤️</div><div class="heart svelte-1lra3i" style="top: 150px; left: 70%; animation-delay: 4s;">❤️</div><div class="heart svelte-1lra3i" style="top: 80px; left: 30%; animation-delay: 5s;">❤️</div><!--]--> <!--[--><!--]--> <div class="header-content svelte-10x4prz"><h1 class="main-title svelte-10x4prz">С Днём Святого Валентина, Айдана!❤️</h1> <div class="nav-container svelte-10x4prz"><button class="nav-btn svelte-10x4prz"><i class="fas fa-heart"></i> <span>Моё послание</span></button> <button class="nav-btn svelte-10x4prz"><i class="fas fa-gift"></i> <span>Подарки</span></button> <button class="nav-btn svelte-10x4prz"><i class="fas fa-calendar-alt"></i> <span>Свидание</span></button></div></div></header><!----> <main><div class="content svelte-12qhfyh"><!--[--><!----><div class="page-wrapper svelte-1uha8ag"><section class="home svelte-1uha8ag"><div class="decorative-hearts svelte-1vfcpqd"><div class="heart svelte-1vfcpqd">❤️</div> <div class="heart svelte-1vfcpqd">💕</div> <div class="heart svelte-1vfcpqd">💖</div> <div class="heart svelte-1vfcpqd">💝</div></div><!----> <div class="welcome-section svelte-1uha8ag"><h1 class="title svelte-1uha8ag">С Днём Святого Валентина! 💖</h1> <p class="subtitle svelte-1uha8ag">Для самого особенного человека</p></div> <div class="card-container svelte-acc0wk"><div class="card-wrapper svelte-acc0wk" role="button" tabindex="0"><div class="card-cover card-front svelte-acc0wk"><div class="cover-title svelte-acc0wk">Для Тебя 💝</div> <div class="cover-subtitle svelte-acc0wk">самому специальному человеку</div> <div class="cover-heart svelte-acc0wk">❤️</div> <div class="cover-subtitle svelte-acc0wk">нажми, чтобы открыть</div></div> <div class="card-cover card-back svelte-acc0wk"><div style="color: white; text-align: center; padding: 20px;" class="svelte-acc0wk"><div style="font-size: 1.5rem; margin-bottom: 10px;" class="svelte-acc0wk">❤️</div> <div style="font-size: 0.9rem; opacity: 0.9;" class="svelte-acc0wk">С любовью</div></div></div> <!--[!--><!--]--></div></div><!----> <div class="bottom-message svelte-1uha8ag"><p class="instruction svelte-1uha8ag"><i class="fas fa-hand-pointer svelte-1uha8ag"></i> Нажми на открытку, чтобы открыть послание</p></div></section></div><!----><!--]--></div></main> <nav class="bottom-nav svelte-oeh3u8"><div class="bottom-nav-items svelte-oeh3u8"><!--[--><button class="nav-item svelte-oeh3u8 active"><i class="fas fa-heart svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Любовь</span></button><button class="nav-item svelte-oeh3u8"><i class="fas fa-calendar-alt svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Дата</span></button><button class="nav-item svelte-oeh3u8"><i class="fas fa-music svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Музыка</span></button><button class="nav-item svelte-oeh3u8"><i class="fas fa-camera svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Фото</span></button><!--]--></div></nav><!----></div><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_mdxy7l = {
+					__sveltekit_1sb61bw = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/valentine-app"
 					};
@@ -40,8 +40,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DTwI9_z2.js"),
-						import("./_app/immutable/entry/app.Ntw6KjFJ.js")
+						import("./app/immutable/entry/start.T3EaHik5.js"),
+						import("./app/immutable/entry/app.R7v5xybD.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
