--- a/404.html
+++ b/404.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/app/immutable/entry/start.B-wYJ7Wc.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/BbiN0SMT.js">
+		<link rel="modulepreload" href="/app/immutable/entry/start.Xxf4UoFJ.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/CfrHAbkr.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/BBHjuitq.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/C9NY-9RC.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/CpSE531D.js">
+		<link rel="modulepreload" href="/app/immutable/chunks/C8jTKIwr.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/C7vWIKlG.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.Be-66vp6.js">
+		<link rel="modulepreload" href="/app/immutable/entry/app.C9g0-Zfx.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/xb9eWh_e.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/R4DkLa8W.js">
 		<link rel="modulepreload" href="/app/immutable/chunks/DClelHdK.js">
@@ -21,15 +21,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1b7ou9r = {
+					__sveltekit_1v5jv9t = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.B-wYJ7Wc.js"),
-						import("/app/immutable/entry/app.Be-66vp6.js")
+						import("/app/immutable/entry/start.Xxf4UoFJ.js"),
+						import("/app/immutable/entry/app.C9g0-Zfx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
