--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 		<link href="./app/immutable/assets/0.c5OG9c5b.css" rel="stylesheet">
 		<link href="./app/immutable/assets/DecorativeHearts.Cw-xhZ3N.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.CgbvD8Wu.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.B-wYJ7Wc.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/BbiN0SMT.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.Xxf4UoFJ.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/CfrHAbkr.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/BBHjuitq.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/C9NY-9RC.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/CpSE531D.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/C8jTKIwr.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/C7vWIKlG.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.Be-66vp6.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.C9g0-Zfx.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/xb9eWh_e.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/R4DkLa8W.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/DClelHdK.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/B6ijnidv.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.Du5Uff7y.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CiyilW2x.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/DB6_87id.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/QqDisodb.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/C20a0blh.js">
@@ -32,15 +32,15 @@
 			
 			<script>
 				{
-					__sveltekit_1b7ou9r = {
+					__sveltekit_1v5jv9t = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.B-wYJ7Wc.js"),
-						import("./app/immutable/entry/app.Be-66vp6.js")
+						import("./app/immutable/entry/start.Xxf4UoFJ.js"),
+						import("./app/immutable/entry/app.C9g0-Zfx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
