--- a/photos/index.html
+++ b/photos/index.html
@@ -7,37 +7,37 @@
 		
 		<link href="../app/immutable/assets/0.c5OG9c5b.css" rel="stylesheet">
 		<link href="../app/immutable/assets/5.oQ5axx8D.css" rel="stylesheet">
-		<link rel="modulepreload" href="../app/immutable/entry/start.B-wYJ7Wc.js">
-		<link rel="modulepreload" href="../app/immutable/chunks/BbiN0SMT.js">
+		<link rel="modulepreload" href="../app/immutable/entry/start.Xxf4UoFJ.js">
+		<link rel="modulepreload" href="../app/immutable/chunks/CfrHAbkr.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/BBHjuitq.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/C9NY-9RC.js">
-		<link rel="modulepreload" href="../app/immutable/chunks/CpSE531D.js">
+		<link rel="modulepreload" href="../app/immutable/chunks/C8jTKIwr.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/C7vWIKlG.js">
-		<link rel="modulepreload" href="../app/immutable/entry/app.Be-66vp6.js">
+		<link rel="modulepreload" href="../app/immutable/entry/app.C9g0-Zfx.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/xb9eWh_e.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/R4DkLa8W.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/DClelHdK.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/B6ijnidv.js">
-		<link rel="modulepreload" href="../app/immutable/nodes/0.Du5Uff7y.js">
+		<link rel="modulepreload" href="../app/immutable/nodes/0.CiyilW2x.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/DB6_87id.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/QqDisodb.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/C20a0blh.js">
-		<link rel="modulepreload" href="../app/immutable/nodes/5.IloG6yXD.js"><!--12qhfyh--><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/><!----><title>С Днём Святого Валентина!</title>
+		<link rel="modulepreload" href="../app/immutable/nodes/5.95vJO0Cv.js"><!--12qhfyh--><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/><!----><title>С Днём Святого Валентина!</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!----><div class="valentine-app svelte-12qhfyh"><header class="valentine-header svelte-10x4prz"><!--[--><div class="heart svelte-1lra3i" style="top: 20px; left: 5%; animation-delay: 0s;">❤️</div><div class="heart svelte-1lra3i" style="top: 60px; left: 90%; animation-delay: 1s;">❤️</div><div class="heart svelte-1lra3i" style="top: 40px; left: 80%; animation-delay: 2s;">❤️</div><div class="heart svelte-1lra3i" style="top: 100px; left: 15%; animation-delay: 3s;">❤️</div><div class="heart svelte-1lra3i" style="top: 150px; left: 70%; animation-delay: 4s;">❤️</div><div class="heart svelte-1lra3i" style="top: 80px; left: 30%; animation-delay: 5s;">❤️</div><!--]--> <!--[--><!--]--> <div class="header-content svelte-10x4prz"><h1 class="main-title svelte-10x4prz">С Днём Святого Валентина, Айдана!❤️</h1> <div class="nav-container svelte-10x4prz"><button class="nav-btn svelte-10x4prz"><i class="fas fa-heart"></i> <span>Моё послание</span></button> <button class="nav-btn svelte-10x4prz"><i class="fas fa-gift"></i> <span>Подарки</span></button> <button class="nav-btn svelte-10x4prz"><i class="fas fa-calendar-alt"></i> <span>Свидание</span></button></div></div></header><!----> <main><div class="content svelte-12qhfyh"><!--[--><!----><div class="photos-page svelte-1pgek9m"><div class="gradient-bg svelte-1pgek9m"></div> <div class="floating-frames svelte-1pgek9m"><!--[--><!--]--></div> <div class="photos-container svelte-1pgek9m"><div class="photos-header svelte-1pgek9m"><h1 class="photos-title svelte-1pgek9m">Наши фото</h1> <p class="photos-subtitle svelte-1pgek9m"><i class="fas fa-camera svelte-1pgek9m"></i> MOMENTS <i class="fas fa-heart svelte-1pgek9m"></i></p></div> <div class="polaroid-feature svelte-1pgek9m"><div class="feature-image-container svelte-1pgek9m"><img class="feature-image svelte-1pgek9m" src="../photos/feature.jpg" alt="Галерея ❤️" loading="lazy"/> <div class="image-overlay svelte-1pgek9m"><div class="image-caption svelte-1pgek9m">Галерея ❤️</div> <div class="image-date svelte-1pgek9m"><i class="fas fa-calendar-alt svelte-1pgek9m"></i> 21 ноября 2024</div></div></div> <div class="polaroid-footer svelte-1pgek9m"><span class="polaroid-title svelte-1pgek9m">LOVE STORY</span> <span class="polaroid-heart svelte-1pgek9m">❤️</span></div></div> <div class="gallery-grid svelte-1pgek9m"><!--[--><div class="photo-card svelte-1ajugji"><div class="photo-image-container svelte-1ajugji"><img class="photo-image svelte-1ajugji" src="../photos/photo-1.jpg" alt="Ночная прогулка" loading="lazy"/></div> <div class="photo-info svelte-1ajugji"><div class="photo-location svelte-1ajugji"><span class="svelte-1ajugji">Бишкек</span></div> <div class="photo-like svelte-1ajugji"><i class="far fa-heart svelte-1ajugji"></i> <span class="likes-count">67</span></div></div></div><div class="photo-card svelte-1ajugji"><div class="photo-image-container svelte-1ajugji"><img class="photo-image svelte-1ajugji" src="../photos/photo-2.jpg" alt="Кинотеатр" loading="lazy"/></div> <div class="photo-info svelte-1ajugji"><div class="photo-location svelte-1ajugji"><span class="svelte-1ajugji">Бишкек</span></div> <div class="photo-like svelte-1ajugji"><i class="far fa-heart svelte-1ajugji"></i> <span class="likes-count">67</span></div></div></div><div class="photo-card svelte-1ajugji"><div class="photo-image-container svelte-1ajugji"><img class="photo-image svelte-1ajugji" src="../photos/photo-3.jpg" alt="Зимняя прогулка" loading="lazy"/></div> <div class="photo-info svelte-1ajugji"><div class="photo-location svelte-1ajugji"><span class="svelte-1ajugji">Бишкек</span></div> <div class="photo-like svelte-1ajugji"><i class="far fa-heart svelte-1ajugji"></i> <span class="likes-count">67</span></div></div></div><div class="photo-card svelte-1ajugji"><div class="photo-image-container svelte-1ajugji"><img class="photo-image svelte-1ajugji" src="../photos/photo-4.jpg" alt="Двойное свидание" loading="lazy"/></div> <div class="photo-info svelte-1ajugji"><div class="photo-location svelte-1ajugji"><span class="svelte-1ajugji">Бишкек</span></div> <div class="photo-like svelte-1ajugji"><i class="far fa-heart svelte-1ajugji"></i> <span class="likes-count">67</span></div></div></div><!--]--></div></div> <!--[!--><!--]--><!----></div><!----><!--]--></div></main> <nav class="bottom-nav svelte-oeh3u8"><div class="bottom-nav-items svelte-oeh3u8"><!--[--><button class="nav-item svelte-oeh3u8"><i class="fas fa-heart svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Любовь</span></button><button class="nav-item svelte-oeh3u8"><i class="fas fa-calendar-alt svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Дата</span></button><button class="nav-item svelte-oeh3u8"><i class="fas fa-music svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Музыка</span></button><button class="nav-item svelte-oeh3u8 active"><i class="fas fa-camera svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Фото</span></button><!--]--></div></nav><!----></div><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1b7ou9r = {
+					__sveltekit_1v5jv9t = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../app/immutable/entry/start.B-wYJ7Wc.js"),
-						import("../app/immutable/entry/app.Be-66vp6.js")
+						import("../app/immutable/entry/start.Xxf4UoFJ.js"),
+						import("../app/immutable/entry/app.C9g0-Zfx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
