--- a/404.html
+++ b/404.html
@@ -2,34 +2,35 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.svg" />
+		<link rel="icon" href="/valentine-app/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/app/immutable/entry/start.Xxf4UoFJ.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/CfrHAbkr.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/BBHjuitq.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/C9NY-9RC.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/C8jTKIwr.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/C7vWIKlG.js">
-		<link rel="modulepreload" href="/app/immutable/entry/app.C9g0-Zfx.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/xb9eWh_e.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/R4DkLa8W.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/DClelHdK.js">
-		<link rel="modulepreload" href="/app/immutable/chunks/B6ijnidv.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/entry/start.Bnus1q9b.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/D1YdDFwO.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/BBHjuitq.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/C9NY-9RC.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/3mcTWeXO.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/C7vWIKlG.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/entry/app.CBJGHNUy.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/xb9eWh_e.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/R4DkLa8W.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/DClelHdK.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/B6ijnidv.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1v5jv9t = {
-						base: ""
+					__sveltekit_ztzycf = {
+						base: "/valentine-app",
+						assets: "/valentine-app"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/app/immutable/entry/start.Xxf4UoFJ.js"),
-						import("/app/immutable/entry/app.C9g0-Zfx.js")
+						import("/valentine-app/app/immutable/entry/start.Bnus1q9b.js"),
+						import("/valentine-app/app/immutable/entry/app.CBJGHNUy.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
