--- a/404.html
+++ b/404.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="/valentine-app/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/valentine-app/app/immutable/entry/start.Bnus1q9b.js">
-		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/D1YdDFwO.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/entry/start.CBNHLvFw.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/CJxiwBqy.js">
 		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/BBHjuitq.js">
 		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/C9NY-9RC.js">
-		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/3mcTWeXO.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/Dcni6p3g.js">
 		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/C7vWIKlG.js">
-		<link rel="modulepreload" href="/valentine-app/app/immutable/entry/app.CBJGHNUy.js">
+		<link rel="modulepreload" href="/valentine-app/app/immutable/entry/app.BdlvD7GZ.js">
 		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/xb9eWh_e.js">
 		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/R4DkLa8W.js">
 		<link rel="modulepreload" href="/valentine-app/app/immutable/chunks/DClelHdK.js">
@@ -21,7 +21,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_ztzycf = {
+					__sveltekit_1l01drm = {
 						base: "/valentine-app",
 						assets: "/valentine-app"
 					};
@@ -29,8 +29,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/valentine-app/app/immutable/entry/start.Bnus1q9b.js"),
-						import("/valentine-app/app/immutable/entry/app.CBJGHNUy.js")
+						import("/valentine-app/app/immutable/entry/start.CBNHLvFw.js"),
+						import("/valentine-app/app/immutable/entry/app.BdlvD7GZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
