--- a/date/index.html
+++ b/date/index.html
@@ -8,18 +8,18 @@
 		<link href="../app/immutable/assets/0.c5OG9c5b.css" rel="stylesheet">
 		<link href="../app/immutable/assets/DecorativeHearts.Cw-xhZ3N.css" rel="stylesheet">
 		<link href="../app/immutable/assets/3.BtGqToCR.css" rel="stylesheet">
-		<link rel="modulepreload" href="../app/immutable/entry/start.Bnus1q9b.js">
-		<link rel="modulepreload" href="../app/immutable/chunks/D1YdDFwO.js">
+		<link rel="modulepreload" href="../app/immutable/entry/start.CBNHLvFw.js">
+		<link rel="modulepreload" href="../app/immutable/chunks/CJxiwBqy.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/BBHjuitq.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/C9NY-9RC.js">
-		<link rel="modulepreload" href="../app/immutable/chunks/3mcTWeXO.js">
+		<link rel="modulepreload" href="../app/immutable/chunks/Dcni6p3g.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/C7vWIKlG.js">
-		<link rel="modulepreload" href="../app/immutable/entry/app.CBJGHNUy.js">
+		<link rel="modulepreload" href="../app/immutable/entry/app.BdlvD7GZ.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/xb9eWh_e.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/R4DkLa8W.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/DClelHdK.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/B6ijnidv.js">
-		<link rel="modulepreload" href="../app/immutable/nodes/0.B_mXoPMO.js">
+		<link rel="modulepreload" href="../app/immutable/nodes/0.DixCpgPM.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/DB6_87id.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/QqDisodb.js">
 		<link rel="modulepreload" href="../app/immutable/chunks/C20a0blh.js">
@@ -28,11 +28,11 @@
 		<link rel="modulepreload" href="../app/immutable/chunks/DCwrimb1.js"><!--12qhfyh--><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/><!----><title>С Днём Святого Валентина!</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><div class="valentine-app svelte-12qhfyh"><header class="valentine-header svelte-10x4prz"><!--[--><div class="heart svelte-1lra3i" style="top: 20px; left: 5%; animation-delay: 0s;">❤️</div><div class="heart svelte-1lra3i" style="top: 60px; left: 90%; animation-delay: 1s;">❤️</div><div class="heart svelte-1lra3i" style="top: 40px; left: 80%; animation-delay: 2s;">❤️</div><div class="heart svelte-1lra3i" style="top: 100px; left: 15%; animation-delay: 3s;">❤️</div><div class="heart svelte-1lra3i" style="top: 150px; left: 70%; animation-delay: 4s;">❤️</div><div class="heart svelte-1lra3i" style="top: 80px; left: 30%; animation-delay: 5s;">❤️</div><!--]--> <!--[--><!--]--> <div class="header-content svelte-10x4prz"><h1 class="main-title svelte-10x4prz">С Днём Святого Валентина, Айдана!❤️</h1> <div class="nav-container svelte-10x4prz"><button class="nav-btn svelte-10x4prz"><i class="fas fa-heart"></i> <span>Моё послание</span></button> <button class="nav-btn svelte-10x4prz"><i class="fas fa-gift"></i> <span>Подарки</span></button> <button class="nav-btn svelte-10x4prz"><i class="fas fa-calendar-alt"></i> <span>Свидание</span></button></div></div></header><!----> <main><div class="content svelte-12qhfyh"><!--[--><!----><section class="date svelte-ta8p4p"><div class="decorative-hearts svelte-1vfcpqd"><div class="heart svelte-1vfcpqd">❤️</div> <div class="heart svelte-1vfcpqd">💕</div> <div class="heart svelte-1vfcpqd">💖</div> <div class="heart svelte-1vfcpqd">💝</div></div><!----> <h2 class="title svelte-ta8p4p">Мы вместе уже</h2> <div class="counter svelte-pybf7o"><div class="counter-item svelte-1y71w23"><div class="counter-value svelte-1y71w23">449</div> <div class="counter-label svelte-1y71w23">дней</div></div><!----> <div class="counter-separator svelte-pybf7o">:</div> <div class="counter-item svelte-1y71w23"><div class="counter-value svelte-1y71w23">02</div> <div class="counter-label svelte-1y71w23">часов</div></div><!----> <div class="counter-separator svelte-pybf7o">:</div> <div class="counter-item svelte-1y71w23"><div class="counter-value svelte-1y71w23">42</div> <div class="counter-label svelte-1y71w23">минут</div></div><!----> <div class="counter-separator svelte-pybf7o">:</div> <div class="counter-item svelte-1y71w23"><div class="counter-value svelte-1y71w23">05</div> <div class="counter-label svelte-1y71w23">секунд</div></div><!----></div><!----> <p class="since svelte-ta8p4p">с 21 ноября, 16:00 (примерно) <span class="heart-icon svelte-ta8p4p">❤️</span></p> <div class="love-line svelte-h58hlu"><div class="line svelte-h58hlu"></div> <div class="heart-pulse svelte-h58hlu">💗</div> <div class="line svelte-h58hlu"></div></div><!----></section><!----><!--]--></div></main> <nav class="bottom-nav svelte-oeh3u8"><div class="bottom-nav-items svelte-oeh3u8"><!--[--><button class="nav-item svelte-oeh3u8 active"><i class="fas fa-heart svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Любовь</span></button><button class="nav-item svelte-oeh3u8"><i class="fas fa-calendar-alt svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Дата</span></button><button class="nav-item svelte-oeh3u8"><i class="fas fa-music svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Музыка</span></button><button class="nav-item svelte-oeh3u8"><i class="fas fa-camera svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Фото</span></button><!--]--></div></nav><!----></div><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><div class="valentine-app svelte-12qhfyh"><header class="valentine-header svelte-10x4prz"><!--[--><div class="heart svelte-1lra3i" style="top: 20px; left: 5%; animation-delay: 0s;">❤️</div><div class="heart svelte-1lra3i" style="top: 60px; left: 90%; animation-delay: 1s;">❤️</div><div class="heart svelte-1lra3i" style="top: 40px; left: 80%; animation-delay: 2s;">❤️</div><div class="heart svelte-1lra3i" style="top: 100px; left: 15%; animation-delay: 3s;">❤️</div><div class="heart svelte-1lra3i" style="top: 150px; left: 70%; animation-delay: 4s;">❤️</div><div class="heart svelte-1lra3i" style="top: 80px; left: 30%; animation-delay: 5s;">❤️</div><!--]--> <!--[--><!--]--> <div class="header-content svelte-10x4prz"><h1 class="main-title svelte-10x4prz">С Днём Святого Валентина, Айдана!❤️</h1> <div class="nav-container svelte-10x4prz"><button class="nav-btn svelte-10x4prz"><i class="fas fa-heart"></i> <span>Моё послание</span></button> <button class="nav-btn svelte-10x4prz"><i class="fas fa-gift"></i> <span>Подарки</span></button> <button class="nav-btn svelte-10x4prz"><i class="fas fa-calendar-alt"></i> <span>Свидание</span></button></div></div></header><!----> <main><div class="content svelte-12qhfyh"><!--[--><!----><section class="date svelte-ta8p4p"><div class="decorative-hearts svelte-1vfcpqd"><div class="heart svelte-1vfcpqd">❤️</div> <div class="heart svelte-1vfcpqd">💕</div> <div class="heart svelte-1vfcpqd">💖</div> <div class="heart svelte-1vfcpqd">💝</div></div><!----> <h2 class="title svelte-ta8p4p">Мы вместе уже</h2> <div class="counter svelte-pybf7o"><div class="counter-item svelte-1y71w23"><div class="counter-value svelte-1y71w23">449</div> <div class="counter-label svelte-1y71w23">дней</div></div><!----> <div class="counter-separator svelte-pybf7o">:</div> <div class="counter-item svelte-1y71w23"><div class="counter-value svelte-1y71w23">02</div> <div class="counter-label svelte-1y71w23">часов</div></div><!----> <div class="counter-separator svelte-pybf7o">:</div> <div class="counter-item svelte-1y71w23"><div class="counter-value svelte-1y71w23">50</div> <div class="counter-label svelte-1y71w23">минут</div></div><!----> <div class="counter-separator svelte-pybf7o">:</div> <div class="counter-item svelte-1y71w23"><div class="counter-value svelte-1y71w23">50</div> <div class="counter-label svelte-1y71w23">секунд</div></div><!----></div><!----> <p class="since svelte-ta8p4p">с 21 ноября, 16:00 (примерно) <span class="heart-icon svelte-ta8p4p">❤️</span></p> <div class="love-line svelte-h58hlu"><div class="line svelte-h58hlu"></div> <div class="heart-pulse svelte-h58hlu">💗</div> <div class="line svelte-h58hlu"></div></div><!----></section><!----><!--]--></div></main> <nav class="bottom-nav svelte-oeh3u8"><div class="bottom-nav-items svelte-oeh3u8"><!--[--><button class="nav-item svelte-oeh3u8 active"><i class="fas fa-heart svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Любовь</span></button><button class="nav-item svelte-oeh3u8"><i class="fas fa-calendar-alt svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Дата</span></button><button class="nav-item svelte-oeh3u8"><i class="fas fa-music svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Музыка</span></button><button class="nav-item svelte-oeh3u8"><i class="fas fa-camera svelte-oeh3u8"></i> <span class="svelte-oeh3u8">Фото</span></button><!--]--></div></nav><!----></div><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_ztzycf = {
+					__sveltekit_1l01drm = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						assets: "/valentine-app"
 					};
@@ -40,8 +40,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../app/immutable/entry/start.Bnus1q9b.js"),
-						import("../app/immutable/entry/app.CBJGHNUy.js")
+						import("../app/immutable/entry/start.CBNHLvFw.js"),
+						import("../app/immutable/entry/app.BdlvD7GZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
