--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 		<link href="./app/immutable/assets/0.c5OG9c5b.css" rel="stylesheet">
 		<link href="./app/immutable/assets/DecorativeHearts.Cw-xhZ3N.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.CgbvD8Wu.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.Bnus1q9b.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/D1YdDFwO.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.CBNHLvFw.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/CJxiwBqy.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/BBHjuitq.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/C9NY-9RC.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/3mcTWeXO.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/Dcni6p3g.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/C7vWIKlG.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.CBJGHNUy.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.BdlvD7GZ.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/xb9eWh_e.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/R4DkLa8W.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/DClelHdK.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/B6ijnidv.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.B_mXoPMO.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.DixCpgPM.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/DB6_87id.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/QqDisodb.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/C20a0blh.js">
@@ -32,7 +32,7 @@
 			
 			<script>
 				{
-					__sveltekit_ztzycf = {
+					__sveltekit_1l01drm = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/valentine-app"
 					};
@@ -40,8 +40,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.Bnus1q9b.js"),
-						import("./app/immutable/entry/app.CBJGHNUy.js")
+						import("./app/immutable/entry/start.CBNHLvFw.js"),
+						import("./app/immutable/entry/app.BdlvD7GZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
